# ENTREGAFINAL

./: .gitnore  CMakeLists.txt  backup.txt  citamedica.cpp  citamedica.h  fecha.cpp  fecha.h  main.cpp  medico.cpp  medico.h  paciente.cpp  paciente.h  persona.cpp  persona.h  registroClinico.cpp  registroclinico.h
